k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: allguitars/grails-react:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 1024Mi
              ephemeral-storage: 128Mi
            requests:
              cpu: 100m
              memory: 512Mi
